# in-context-pretraining

./: README.md  requirements.txt
build_embeds/: chunk_logger.py  retro_z_data.py  retro_z_data_xforms.py  retro_z_retrieval.py  retro_z_utils.py  submitit_utils.py
build_embeds/RETRO-pytorch/: README.md  dataset_main_page.py  pylintrc  pyproject.toml  setup.py
build_embeds/RETRO-pytorch/.github/workflows/: python-ci.yml
build_embeds/RETRO-pytorch/pages/: raw.py  retro_input.py
build_embeds/RETRO-pytorch/retro_pytorch/: __init__.py  data.py  optimizer.py  retrieval.py  retro_pytorch.py  streamlit.py  training.py  utils.py
build_embeds/RETRO-pytorch/tests/: test_dataset_viewer.py  test_retro_dataset.py
build_embeds/configs/: example_config.yaml
configs/: config_test.yaml
knn_search/offline_ivf/: .gitignore  README.md  a  baseline_search.py  baseline_search.sh  big_batch_search.py  config_contriever_rsc.yaml  config_test.yaml  create_bigann_files.py  create_snnpp_files.py  dataset.py  generate_config.py  launch_utils.py  neighbour_vector_fetcher.py  offline_ivf.py  run.py  run_bitext_analysis.py  run_neighbour_fetcher.py  translate.py  utils.py
knn_search/offline_ivf/configs/: config_test.yaml
knn_search/offline_ivf/notebooks/: PQ_hashing.ipynb  baseline_search.ipynb  bitext_analysis.ipynb  blue_score.ipynb  create_test_data.ipynb  debug_normalised_mip.ipynb  debugging.ipynb  evaluate_PQ256.ipynb  evaluate_PQ512.ipynb  evaluate_PQ64.ipynb  evaluate_SQ8.ipynb  half_margin.ipynb  knn_intersection_bigann.ipynb  knn_ssnpp.ipynb  (+8 more)
sort/: check_match.py  sort.py
(+14 files in other folders)
